design: Update calendar page and noticeboard page
일정 캘린더 페이지를 새로 디자인했습니다.
글 상세 페이지도 새로운 디자인에 맞추어 수정했습니다.

--- a/frontend/src/styles/datepicker.css
+++ b/frontend/src/styles/datepicker.css
@@ -1,3 +1,17 @@
+.react-datepicker {
+  position: fixed;
+  left: -70%;
+}
+
+.react-datepicker-popper {
+  position: fixed !important;
+  transform: none !important;
+}
+
+.datepicker-container {
+  position: relative;
+}
+
 .react-datepicker__header {
   border: none !important;
 }
@@ -56,4 +70,11 @@
 .react-datepicker__day--today:hover {
   border: 1px solid #4ea1d3;
   border-radius: 50%;
+}
+
+.react-datepicker__children-container {
+  width: 100% !important;
+  margin: 0 !important;
+  padding-right: 0 !important;
+  padding-left: 0 !important;
 }
