test: 날짜 선택기능 수정시도

--- a/frontend/src/styles/datepicker.css
+++ b/frontend/src/styles/datepicker.css
@@ -1,11 +1,13 @@
 .react-datepicker {
   position: fixed;
-  left: -70%;
 }
+
 
 .react-datepicker-popper {
   position: fixed !important;
   transform: none !important;
+  width: 100vw !important;
+  height: 100vh !important;
 }
 
 .datepicker-container {
