--- a/frontend/src/styles/sweetalert2.css
+++ b/frontend/src/styles/sweetalert2.css
@@ -1,11 +1,59 @@
-.custom-icon-class {
-    position: absolute !important;
-    margin-top: 3%;
-    top: 20% !important;
-    left: 50% !important;
-    transform: translate(-50%, -50%) !important;
+.container {
+    box-sizing: border-box;
 }
 
-.custom-title-class {
-    padding-top: 80px !important;
+.popup {
+    width: 700px;
+    min-height: 246px;
+    padding: 32px 64px;
+
+    border-radius: 20px;
+    background-color: #2C2C33;
+}
+
+.title {
+    width: 100%;
+    height: 50px;
+    font-size: 16px;
+    font-weight: 900;
+    text-align: start;
+}
+
+.body {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    margin: 0 !important;
+    padding: 32px 0 !important;
+
+    font-size: 16px;
+    font-weight: 600;
+    text-align: start;
+}
+
+.buttonContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 40px;
+    margin: 0;
+}
+
+.confirm-button {
+    margin: 0;
+    padding: 0;
+    margin-right: 32px;
+    width: 150px;
+    height: 40px;
+    border-radius: 20px !important;
+}
+
+.cancel-button {
+    margin: 0;
+    padding: 0;
+    width: 150px;
+    height: 40px;
+    border-radius: 20px !important;
 }
