--- a/frontend/src/styles/datepicker.css
+++ b/frontend/src/styles/datepicker.css
@@ -20,12 +20,21 @@
 
 .custom-calender .react-datepicker__day-names {
   background-color: #2c2c33 !important;
+
+  color: rgba(237, 240, 248, 0.70);
+  text-align: center;
+  font-family: 'Pretendard';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
 }
 
 .react-datepicker__day-names .react-datepicker__day-name {
-  margin: 0 10px !important;
+  margin: 0 15px !important;
   color: rgba(237, 240, 248, 0.7) !important;
 }
+
 
 .react-datepicker__month {
   margin: 0 !important;
@@ -37,17 +46,24 @@
 }
 
 .react-datepicker__day {
-  margin: 0 10px !important;
+  margin: 5px 15px !important;
   color: #edf0f8 !important;
+
+  text-align: center;
+  font-family: 'Pretendard';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
 }
 
 .selectedDay {
   background-color: #4ea1d3 !important;
   border-radius: 50% !important;
-  &:hover {
-    background-color: #4ea1d3 !important;
-    border-radius: 50% !important;
-  }
+}
+
+.selectedDay:hover {
+  border-radius: 50% !important;
 }
 
 .unSelectedDay {
@@ -71,7 +87,7 @@
 
 .react-datepicker__day--today:hover {
   border: 1px solid #4ea1d3;
-  border-radius: 50%;
+  border-radius: 50% !important;
 }
 
 .react-datepicker__children-container {
@@ -79,4 +95,9 @@
   margin: 0 !important;
   padding-right: 0 !important;
   padding-left: 0 !important;
+}
+
+.react-datepicker__day--keyboard-selected {
+  border: none !important;
+  background-color: transparent !important;
 }
